--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -34,7 +34,7 @@
 
 			<!-- Bills -->
 			<div class="row">
-				<div class="thumbnail col-xs-6 col-md-3 col-lg-2" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
+				<div class="col-xs-6 col-md-3 col-lg-2" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
 					<p class="text-right">
 						{{bill.bill_type | uppercase}} {{bill.number}}
 					</p>
