--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 	<link href="./client/css/bootstrap-grid.css" rel="stylesheet">
 </head>
-<body>
+<body> -->
 	<h1 class="text-center">Bills for Current Legislative Session</h1>
 
 	<!-- Error Message -->
@@ -68,5 +68,5 @@
 		<!-- End of row -->
 
 	</div>	<!-- End of Content Div -->
-</body>
-</html>
+<!-- </body>
+</html> -->
