--- a/public/client/views/politics101/politics101.html
+++ b/public/client/views/politics101/politics101.html
@@ -3,7 +3,9 @@
 
 </head>
 <body>
-	<h1>New To Politics? You've Come To The Right Place!</h1>
+	<div class="container">
+		<h1>New To Politics? You've Come To The Right Place!</h1>
+	</div>
 	<!-- Use Terms within relevant block -->
 	<!-- Two Party System
 		Democrats and Republicans
