--- a/public/client/css/styles.css
+++ b/public/client/css/styles.css
@@ -8,6 +8,10 @@ html {
 	font-size: 16px;
 }
 
+.full-width {
+	width: 100%;
+}
+
 .heading-3 {
 	font-size: 1.5rem;
 }
@@ -34,17 +38,16 @@ html {
 	color: inherit;
 }
 
-.thumbnail:hover {
+.card:hover {
 	background-color: #7087AA;
 	color: #FFFFFF;
 	border: 1px solid #FFFFFF;
 }
 
-.thumbnail {
+.card {
 	background-color: #FFFFFF;
 	border: 1px solid #7087AA;
 	color: #000000;
-	width: 100%;
 }
 
 .panel {
@@ -122,10 +125,30 @@ span.network-name {
 	color: #FFFFFF;
 }
 
+.list-group-header {
+	background-color: #FFFFFF;
+	border: 1px solid black;
+	color: #861316;
+}
+
+.well {
+	background-color: #E8E6E6;
+}
+
 /* Spacing */
+.center-block{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 body > .no-padding,
 .no-padding {
 	padding: 0;
+}
+
+.top-padding {
+	padding-top: 10px;
 }
 
 .top-margin {
@@ -212,6 +235,7 @@ body > .no-padding,
 	padding-top: 20px;
 	border-left: 1px solid #861316;
 	border-right: 1px solid #861316;
+	border-top: 1px solid #861316;
 	padding-left: 10px;
 	padding-right: 10px;
 }
