--- a/public/client/views/billDetail/billDetail.html
+++ b/public/client/views/billDetail/billDetail.html
@@ -1,99 +1,128 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="./client/css/foundation 6/foundation.css" rel="stylesheet">
 </head>
 <body>
-	<!-- Error Message -->
-	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or navigating back to the <a href="#/bills">Bills page</a>.</div>
+	<div class="container" ng-show="model.hasError">
+		<!-- Error Message -->
+		<div class="text-xs-center alert alert-danger">
+			Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or navigating back to the <a href="#/bills">Bills page</a>.
+		</div>
+	</div>
 	
 	<!-- Content, shown if there is no retrieving data -->
 	<div class="container" ng-show="!model.hasError">
-		<!-- Show Short Title if available, Official Title otherwise --> 
-		<h1 class="text-center text-margins" ng-show="!model.currentBill.short_title">{{model.currentBill.official_title}}</h1>
-		<h1 class="text-center text-margins" ng-show="model.currentBill.short_title">{{model.currentBill.short_title}}</h1>
 
-		<h2 class="text-center no-margin">Bill {{model.currentBill.bill_type | uppercase}} {{model.currentBill.number}}</h2>
-		<p class="heading-3 text-center text-margins"><strong>Introduced on: </strong>{{model.currentBill.introduced_on | date : "longDate"}}</p>
-		<p class="heading-3 text-center no-margin">Introduced in the <span ng-show="model.currentBill.chamber === 'house'">House of Representatives</span> <span ng-show="model.currentBill.chamber === 'senate'">Senate</span> 
+		<!-- Show Short Title if available, Official Title otherwise --> 
+		<h1 class="text-xs-center text-margins" ng-show="!model.currentBill.short_title">{{model.currentBill.official_title}}</h1>
+		<h1 class="text-xs-center text-margins" ng-show="model.currentBill.short_title">{{model.currentBill.short_title}}</h1>
+
+		<h2 class="text-xs-center no-margin">Bill {{model.currentBill.bill_type | uppercase}} {{model.currentBill.number}}</h2>
+		<p class="heading-3 text-xs-center text-margins"><strong>Introduced on: </strong>{{model.currentBill.introduced_on | date : "longDate"}}</p>
+		<p class="heading-3 text-xs-center no-margin">Introduced in the <span ng-show="model.currentBill.chamber === 'house'">House of Representatives</span> <span ng-show="model.currentBill.chamber === 'senate'">Senate</span> 
 		</p>
 		
 		<!-- Sponsor -->
 		<h3 class="text-margins">Sponsor:</h3>
-		<div class="row thumbnail" ng-click="model.onLegislatorClick(model.currentBill.sponsor.bioguide_id)">
-			<div class="small-4 medium-2 columns">
-				<img class="img-responsive" ng-src="https://theunitedstates.io/images/congress/225x275/{{model.currentBill.sponsor.bioguide_id}}.jpg">
-			</div>
-			<div class="small-8 medium-10 columns">
-				<p>{{model.currentBill.sponsor.title}}. {{model.currentBill.sponsor.first_name}} <span ng-show="model.currentBill.sponsor.middle_name">{{model.currentBill.sponsor.middle_name}}</span> {{model.currentBill.sponsor.last_name}} ({{model.currentBill.sponsor.party}})</p>
-				<p>of {{model.currentBill.sponsor.state_name}}</p>
+		<div class="row">
+			<div class="col-xs-12 card" ng-click="model.onLegislatorClick(model.currentBill.sponsor.bioguide_id)">
+				<div class="row">
+					<div class="col-xs-6 col-sm-4">
+						<img class="img-fluid" ng-src="https://theunitedstates.io/images/congress/225x275/{{model.currentBill.sponsor.bioguide_id}}.jpg">
+					</div>
+					<div class="col-xs-6 col-sm-8">
+						<p>{{model.currentBill.sponsor.title}}. {{model.currentBill.sponsor.first_name}} <span ng-show="model.currentBill.sponsor.middle_name">{{model.currentBill.sponsor.middle_name}}</span> {{model.currentBill.sponsor.last_name}} ({{model.currentBill.sponsor.party}})</p>
+						<p>of {{model.currentBill.sponsor.state_name}}</p>
+					</div>
+				</div>
 			</div>
 		</div>
 
 		<!-- Cosponsors -->
-		<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#cosponsors" aria-expanded="false" aria-controls="cosponsors" ng-show="model.currentBill.cosponsors.length > 0">
+		<div class="row">
+			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#cosponsors" aria-expanded="false" aria-controls="cosponsors" ng-show="model.currentBill.cosponsors.length > 0">
 		  {{model.currentBill.cosponsors.length}} Cosponsors <span class="caret"></span>
-		</button>
+			</button>
+		</div>
 
-		<div class="collapse well" id="cosponsors">
-			<div class="row">
-				<div class="small-6 medium-2 columns thumbnail" ng-repeat="cosponsor in model.currentBill.cosponsors" ng-click="model.onLegislatorClick(cosponsor.legislator.bioguide_id)">
-					<img class="img-responsive" ng-src="https://theunitedstates.io/images/congress/225x275/{{cosponsor.legislator.bioguide_id}}.jpg" >
-					<p>
-						{{cosponsor.legislator.first_name}} <span ng-show="cosponsor.legislator.middle_name">{{cosponsor.legislator.middle}}</span> {{cosponsor.legislator.last_name}} ({{cosponsor.legislator.party}})
-					</p>
-					<span>of {{cosponsor.legislator.state_name}}</span>
-				</div>	
+		<div class="row well">
+			<div class="col-xs-12 collapse top-padding" id="cosponsors">
+				<div class="row">
+					<div class="col-xs-6 col-sm-3 col-lg-2 card" ng-repeat="cosponsor in model.currentBill.cosponsors" ng-click="model.onLegislatorClick(cosponsor.legislator.bioguide_id)">
+						<img class="img-fluid" ng-src="https://theunitedstates.io/images/congress/225x275/{{cosponsor.legislator.bioguide_id}}.jpg" >
+						<p>
+							{{cosponsor.legislator.first_name}} <span ng-show="cosponsor.legislator.middle_name">{{cosponsor.legislator.middle}}</span> {{cosponsor.legislator.last_name}} ({{cosponsor.legislator.party}})
+						</p>
+						<span>of {{cosponsor.legislator.state_name}}</span>
+					</div>	
+				</div>
 			</div>
 		</div>
 		
 		<!-- Long and Short Summaries for Bills in Collapsable Divs -->
-		<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary_short" aria-expanded="false" aria-controls="summary_short" ng-show="model.currentBill.summary_short">
-		  Short Summary <span class="caret"></span>
-		</button>
-		<div class="collapse well" id="summary_short" ng-show="model.currentBill.summary_short">
-			<p>{{model.currentBill.summary_short}}</p>	
+		<div class="row">
+			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary_short" aria-expanded="false" aria-controls="summary_short" ng-show="model.currentBill.summary_short">
+		  	Short Summary <span class="caret"></span>
+			</button>
 		</div>
 
-		<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary" aria-expanded="false" aria-controls="summary" ng-show-"model.currentBill.summary">
-		  Full Summary <span class="caret"></span>
-		</button>
-		<div class="collapse well" id="summary">
-			<p ng-show="model.currentBill.summary">{{model.currentBill.summary}}</p>
-			<div class="text-center alert alert-info" ng-show="!model.currentBill.summary">Full text for this bill is not yet available. Click on one of the available URLs for more information!</div>	
+		<div class="row">
+			<div class="collapse" id="summary_short">
+				<div class="well top-padding" ng-show="model.currentBill.summary_short">
+					<p>{{model.currentBill.summary_short}}</p>	
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary" aria-expanded="false" aria-controls="summary" ng-show="model.currentBill.summary">
+		  	Full Summary
+			</button>
+		</div>
+
+		<div class="row">
+			<div class="collapse" id="summary">
+				<div class="well top-padding" ng-show="model.currentBill.summary">
+					<p>{{model.currentBill.summary}}</p>	
+				</div>
+			</div>
 		</div>
 
 		<!-- Links For More Information On Bills  -->
-		<div ng-show="model.urls.length > 0">
-			<h2>URLs:</h2>
-			<p>
-				<span ng-repeat="property in model.urls"><a ng-href="{{model.currentBill.urls[property]}}" target="_blank">{{property}}</a>&nbsp; &nbsp; &nbsp; &nbsp;</span>			
-			</p>
+		<div class="row">
+			<div class="top-padding" ng-show="model.urls.length > 0">
+				<h2>URLs:</h2>
+				<p>
+					<span ng-repeat="property in model.urls"><a ng-href="{{model.currentBill.urls[property]}}" target="_blank">{{property}}</a>&nbsp; &nbsp; &nbsp; &nbsp;</span>			
+				</p>
+			</div>
 		</div>
 
 		<!-- Table View of Actions taken on bill -->
-		<h2>Actions Taken:</h2>
-		<table class="table table-striped">
-			<tr>
-				<th>Action</th>
-				<th>Type</th>
-				<th>Date</th>
-			</tr>
-			<tr ng-repeat="action in model.currentBill.actions">
-				<td>
-					<a ng-href="#/vote/{{action.roll_id}}" ng-show="action.roll_id != undefined">{{action.text}}</a>
-					<span ng-show="action.roll_id === undefined">
-						{{action.text}}
-					</span>
-				</td>
-				<td>
-					{{action.type.substring(0,1) | uppercase}}{{action.type.substring(1)}} 
-					<span ng-show="action.result != undefined">(<strong>{{action.result}}</strong>)</span>
-				</td>
-				<td>{{action.acted_at | date : "longDate"}}</td>
-			</tr>
-		</table>
+		<div class="row">
+			<h2>Actions Taken:</h2>
+			<table class="table table-striped">
+				<tr>
+					<th>Action</th>
+					<th>Type</th>
+					<th>Date</th>
+				</tr>
+				<tr ng-repeat="action in model.currentBill.actions">
+					<td>
+						<a ng-href="#/vote/{{action.roll_id}}" ng-show="action.roll_id != undefined">{{action.text}}</a>
+						<span ng-show="action.roll_id === undefined">
+							{{action.text}}
+						</span>
+					</td>
+					<td>
+						{{action.type.substring(0,1) | uppercase}}{{action.type.substring(1)}} 
+						<span ng-show="action.result != undefined">(<strong>{{action.result}}</strong>)</span>
+					</td>
+					<td>{{action.acted_at | date : "longDate"}}</td>
+				</tr>
+			</table>
+		</div>
 
-	</div>
+	</div> <!-- End of Container -->
 </body>
 </html>
