--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -1,72 +1,67 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<link href="./client/css/bootstrap-grid.css" rel="stylesheet">
 </head>
-<body> -->
-	<h1 class="text-center">Bills for Current Legislative Session</h1>
-
-	<!-- Error Message -->
-	<div class="text-center alert alert-danger" ng-show="model.hasError">
-		Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/bills">clearing</a> your search term.
+<body>
+	<div class="container" ng-show="model.hasError">
+		<!-- Error Message -->
+		<div class="text-xs-center alert alert-danger">
+			Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/bills">clearing</a> your search term.
+		</div>
 	</div>
 
-	<!-- Content -->
 	<div class="container" ng-show="!model.hasError">
+		<h1 class="text-xs-center top-margin">Bills for Current Legislative Session</h1>
 		
-			<!-- Title and Search Bar -->
-<!-- 			<div class="small-12 columns">
-				<div class="row">
-					<div class="small-12 medium-6 medium-offset-6 large-4 large-offset-4 columns">
-						<div class="input-group">
-							<input type="text" class="form-control" placeholder="Search for..." ng-model="model.searchTerm" ng-keypress="model.onKeyPress($event)">
-							<span class="input-group-btn">
-								<button class="btn btn-default" type="button" ng-click="model.onSearch()">
-									<span class="glyphicon glyphicon-search"></span>
-								</button>
-							</span>
-						</div>
-					</div>
+		<!-- Title and Search Bar -->
+		<div class="row">
+			<div class="col-xs-12 col-sm-10 col-lg-6 offset-sm-1 offset-lg-3">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search for..." ng-model="model.searchTerm" ng-keypress="model.onKeyPress($event)">
+					<span class="input-group-btn">
+						<button class="btn btn-default" type="button" ng-click="model.onSearch()">
+							<i class="fa fa-search" aria-hidden="true"></i>
+						</button>
+					</span>
 				</div>
-			</div> -->
+			</div>
+		</div>
 
-			<!-- <h4 class="text-center filter-text">{{model.totalBillCount | number}}{{model.displayMessage}}</h4> -->
+		<h4 class="text-xs-center filter-text text-margins">{{model.totalBillCount | number}}{{model.displayMessage}}</h4>
 
 			<!-- Bills -->
 			<div class="row">
-				<div class="col-xs-6 col-md-3 col-lg-2" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
-					<p class="text-right">
+				<div class="card col-xs-6 col-sm-3 col-lg-2" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
+					<p class="text-xs-right">
 						{{bill.bill_type | uppercase}} {{bill.number}}
 					</p>
-					<p class="text-center" ng-show="bill.short_title">
+					<p class="text-xs-center" ng-show="bill.short_title">
 						<strong>{{bill.short_title}}</strong>
 					</p>
-					<p class="text-center" ng-show="!bill.short_title">
+					<p class="text-xs-center" ng-show="!bill.short_title">
 						<strong>{{bill.official_title}}</strong>
 					</p>
-					<p class="text-center">
+					<p class="text-xs-center">
 						{{bill.last_action_at | date : "longDate"}} @{{bill.last_action_at | date : "shortTime"}}
 					</p>
 				</div>
 			</div>
 
 			<!-- Error Message -->
-			<!-- <div class="text-center alert alert-danger" ng-show="model.hasLoadError">Error loading data! <br>Try loading more again.</div> -->
+			<div class="text-xs-center alert alert-danger" ng-show="model.hasLoadError">Error loading data! <br>Try loading more again.</div>
 
 			<!-- Load More Buttons -->
-			<!-- <div class="small-12 columns">
-				<div class="row">
-					<div class="small-12 columns show-for-small-only bottom-margin" ng-show="model.bills.length < model.totalBillCount">
-						<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(24)">More Bills</button>
-					</div>
-
-					<div class="medium-4 medium-offset-4 columns hide-for-small-only bottom-margin" ng-show="model.bills.length < model.totalBillCount">
-						<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(48)">More Bills</button>
-					</div>
+			<div class="row">
+				<div class="col-xs-12 hidden-sm-up top-margin bottom-margin" ng-show="model.bills.length < model.totalBillCount">
+					<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(24)">More Bills</button>
 				</div>
-			</div> -->
+
+				<div class="col-sm-4 offset-sm-4 hidden-xs-down top-margin bottom-margin" ng-show="model.bills.length < model.totalBillCount">
+					<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(48)">More Bills</button>
+				</div>
+			</div>
 		<!-- End of row -->
 
 	</div>	<!-- End of Content Div -->
-<!-- </body>
-</html> -->
+</body>
+</html> 
