--- a/public/client/views/overview/overview.html
+++ b/public/client/views/overview/overview.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="./client/css/foundation 6/foundation.css" rel="stylesheet">
 	<link href="./client/css/landing-page.css" rel="stylesheet">
 </head>
 <body>
@@ -9,19 +8,19 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12 center-block">
+                <div class="col-xs-12 center-block">
                     <div class="introductory-message">
-                        <img class="img-responsive logo center-block" src="./client/images/mypolitics_logo.svg">
-                        <h3>Political Knowledge At Your Fingertips</h3>
+                        <img class="img-fluid logo center-block" src="./client/images/mypolitics_logo.svg">
+                        <h3 class="text-margins">Political Knowledge At Your Fingertips</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li>
+                            <li class="text-margins">
                                 <button class="btn btn-default btn-lg" ng-click="model.onLegislatorsClick()">Legislators</button>
                             </li>
-                            <li>
+                            <li class="text-margins">
                                 <button class="btn btn-default btn-lg" ng-click="model.onVotesClick()">Votes</button>
                             </li>
-                            <li>
+                            <li class="text-margins">
                                 <button class="btn btn-default btn-lg" ng-click="model.onBillsClick()">Bills</button>
                             </li>
                         </ul>
@@ -42,7 +41,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-xs-12 col-sm-6">
                     <div class="clearfix"></div>
                     <h2 class="section-heading no-top-margin">Get To Know Your Legislators!</h2>
                     <ul>
@@ -53,8 +52,8 @@
                     <p>Get to know each member of Congress!</p>
                     <button class="btn btn-default btn-lg btn-block top-margin bottom-margin" ng-click="model.onLegislatorsClick()">Legislators</button>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive" src="http://ww1.hdnux.com/photos/50/20/67/10554844/3/920x1240.jpg" alt="">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-fluid" src="http://ww1.hdnux.com/photos/50/20/67/10554844/3/920x1240.jpg" alt="">
                 </div>
             </div>
 
@@ -69,7 +68,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-sm-push-6  col-sm-6">
+                <div class="col-xs-12 col-sm-push-6 col-sm-6">
                     <div class="clearfix"></div>
                     <h2 class="section-heading no-top-margin">Which Votes Are Getting Held and When?</h2>
                     <ul>
@@ -81,8 +80,8 @@
                    	<p>Also get a visual breakdown of votes by party!</p>
                     <button class="btn btn-default btn-lg btn-block top-margin bottom-margin" ng-click="model.onVotesClick()">Votes</button>
                 </div>
-                <div class="col-sm-pull-6 col-sm-6">
-                    <img class="img-responsive" src="./client/images/votes.jpg" alt="">
+                <div class="col-xs-12 col-sm-pull-6 col-sm-6">
+                    <img class="img-fluid" src="./client/images/votes.jpg" alt="">
                 </div>
             </div>
 
@@ -97,7 +96,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-xs-12 col-sm-6">
                     <div class="clearfix"></div>
                     <h2 class="section-heading no-top-margin">Explore Congress' Bills</h2>
                     <ul>
@@ -109,8 +108,8 @@
                    	<p>Also get details on who is sponsoring and cosponsoring bills!</p>
                     <button class="btn btn-default btn-lg btn-block top-margin bottom-margin" ng-click="model.onBillsClick()">Bills</button>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive" src="http://media.npr.org/assets/img/2015/12/10/essa-edit_custom-235c1ae54b2e7709fe35b6c3632e2ae6e1f4f99b-s900-c85.jpg" alt="">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-fluid" src="http://media.npr.org/assets/img/2015/12/10/essa-edit_custom-235c1ae54b2e7709fe35b6c3632e2ae6e1f4f99b-s900-c85.jpg" alt="">
                 </div>
             </div>
 
