--- a/public/client/views/legislators/legislators.html
+++ b/public/client/views/legislators/legislators.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		<!-- Error Message -->
 		<div class="text-xs-center alert alert-danger" ng-show="model.hasError">
 			Error retrieving data!
@@ -12,7 +12,7 @@
 	</div>
 
 	<!-- Content -->
-	<div class="container-fluid" ng-show="!model.hasError">
+	<div class="container" ng-show="!model.hasError">
 		<h1 class="text-xs-center top-margin">Current Legislators</h1>
 		
 		<div class="row">
