--- a/public/client/css/styles.css
+++ b/public/client/css/styles.css
@@ -151,6 +151,14 @@ body > .no-padding,
 	padding-top: 10px;
 }
 
+.left-padding {
+	padding-left: 20px;
+}
+
+.right-padding {
+	padding-right: 20px;
+}
+
 .top-margin {
 	margin-top: 20px;
 }
