--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -30,7 +30,7 @@
 		<h4 class="text-xs-center filter-text text-margins">{{model.totalBillCount | number}}{{model.displayMessage}}</h4>
 
 			<!-- Bills -->
-			<div class="row">
+			<div class="row left-padding right-padding">
 				<div class="card col-xs-6 col-sm-3 col-lg-2" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
 					<p class="text-xs-right">
 						{{bill.bill_type | uppercase}} {{bill.number}}
