--- a/public/client/views/votes/votes.html
+++ b/public/client/views/votes/votes.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		<h1 class="text-xs-center top-margin">Congressional Votes</h1>
 
 		<!-- Error Message -->
@@ -20,7 +20,7 @@
 			</div>
 
 			<!-- Votes -->
-			<div class="col-xs-12 col-lg-10">
+			<div class="col-xs-12 col-lg-10 main-content-side-padding">
 				<div class="row">
 					<div class="col-xs-12" ng-show="model.selectedFilters != ''">
 						<p class="text-xs-center filter-text">{{model.selectedFilters}}</p>
